--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <h1>To do</h1>
+    </header>
+    <main>
+        <div id="items">
+            <div class="item">
+                <input type="checkbox" class="item-completed">
+                <input type="text" class="item-description" placeholder="To-Do item">
+            </div>
+        </div>
+        <button id="add-button">Add Item</button>
+    </main>
 </body>
 <script src="script.js"></script>
 </html>
