--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     </header>
     <main>
         <div id="items">
+
+        </div>
+        <template id="list-item-template">
             <div class="item">
                 <input type="checkbox" class="item-completed">
                 <input type="text" class="item-description" placeholder="To-Do item">
             </div>
-        </div>
+        </template>
         <button id="add-button">Add Item</button>
     </main>
 </body>
