--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="item">
                 <input type="checkbox" class="item-completed">
                 <input type="text" class="item-description" placeholder="To-Do item">
+                <button class="delete-btn">X</button>
             </div>
         </template>
         <button id="add-button">Add Item</button>
